<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Parking</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create">创建</string>
    <string name="cancel">取消</string>
    <string name="create_parking">创建停车场</string>
    <string name="create_stall">创建停车位</string>
    <string name="create_charge">创建充电桩</string>
    <string name="briefIntroduction">简介</string>
    <string name="takePhoto">拍照</string>
    <string name="select_photo">选择照片</string>
    <string name="text_information">请填写信息</string>
    <string name="navigation_text">导航</string>
    <string name="navigation2_text">继续导航</string>
    <string name="reserve">创建订单</string>
    <string name="reservecomplete">完成订单</string>
    <string name="delete">删除</string>
    <string name="sure_delete">你确定要删除吗？（此操作不可撤回）</string>
    <string name="sure">确定</string>
    <string name="ownerName">拥有者</string>
    <string name="ownerMobile">拥有者电话</string>
    <string name="address">地址</string>
    <string name="stallInformation">车位信息</string>
    <string name="stallPrice">车位价格(元/时)</string>
    <string name="adminName">管理员姓名</string>
    <string name="adminMobile">管理员电话</string>
    <string name="finePrice">超时罚款</string>

</resources>