<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"
    android:layout_marginTop="16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="12dp"
            android:src="@drawable/arrows"
            android:id="@+id/image_arrows"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_arrows"
            android:layout_margin="12dp"
            android:background="@drawable/commit_background"
            android:id="@+id/create_charge_button"
            android:text="@string/create_charge"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_charge_button"
            android:layout_margin="12dp"
            android:background="@drawable/commit_background"
            android:id="@+id/create_parking_button"
            android:text="@string/create_parking"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_parking_button"
            android:layout_margin="12dp"
            android:background="@drawable/commit_background"
            android:id="@+id/create_stall_button"
            android:text="@string/create_stall"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_stall_button"
            android:layout_margin="12dp"
            android:background="@drawable/cancel_button_background"
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>