<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="194dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"
    android:layout_marginTop="16dp"
    style="@style/BottomSheetDialog"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="12dp"
            android:src="@drawable/arrows"
            android:id="@+id/image_arrows_select_photo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_arrows_select_photo"
            android:text="@string/takePhoto"
            android:background="@drawable/select_photo_background"
            android:id="@+id/take_photo"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/take_photo"
            android:id="@+id/view1"
            android:background="@color/black"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:text="@string/select_photo"
            android:background="@drawable/select_photo_background"
            android:id="@+id/select_photo"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_photo"
            android:background="@color/black"
            android:id="@+id/view2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2"
            android:text="@string/cancel"
            android:background="@drawable/select_photo_background"
            android:id="@+id/select_photo_cancel"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>