<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cus_ParkingActivity"
    android:fitsSystemWindows="true"
    android:background="#F8F8F8"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/create_parking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button"
        android:gravity="center"
        android:background="@color/white"
        />

    <com.xiyou3g.select.parking.MyScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_parking"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/scroll_view"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Cus_ParkingActivity"
            android:fitsSystemWindows="true"
            android:background="#F8F8F8"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/parking_text1"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:id="@+id/parking_text1"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/ownerName"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toEndOf="@id/parking_text1"
                app:layout_constraintBottom_toBottomOf="@id/parking_text1"
                android:id="@+id/parking_edit1"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                app:layout_constraintWidth_percent="0.7"
                android:hint="@string/ownerName"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text1"
                android:background="#D1D1D1"
                android:id="@+id/parking_view1"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view1"
                android:id="@+id/parking_text2"
                android:text="@string/ownerMobile"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text2"
                app:layout_constraintBottom_toBottomOf="@id/parking_text2"
                android:id="@+id/parking_edit2"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:inputType="phone"
                android:hint="@string/ownerMobile"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text2"
                android:background="#D1D1D1"
                android:id="@+id/parking_view2"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view2"
                android:id="@+id/parking_text3"
                android:text="@string/address"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="italic|bold"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text3"
                app:layout_constraintBottom_toBottomOf="@id/parking_text3"
                android:id="@+id/parking_edit3"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:hint="@string/address"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text3"
                android:background="#D1D1D1"
                android:id="@+id/parking_view3"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view3"
                android:id="@+id/parking_text4"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                android:text="@string/stallInformation"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text4"
                app:layout_constraintBottom_toBottomOf="@id/parking_text4"
                android:id="@+id/parking_edit4"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:hint="@string/stallInformation"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text4"
                android:background="#D1D1D1"
                android:id="@+id/parking_view4"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view4"
                android:id="@+id/parking_text5"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                android:text="@string/stallPrice"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text5"
                app:layout_constraintBottom_toBottomOf="@id/parking_text5"
                android:id="@+id/parking_edit5"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:hint="@string/stallPrice"
                android:inputType="number"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text5"
                android:background="#D1D1D1"
                android:id="@+id/parking_view5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view5"
                android:id="@+id/parking_text6"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                android:text="@string/adminName"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text6"
                app:layout_constraintBottom_toBottomOf="@id/parking_text6"
                android:id="@+id/parking_edit6"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:hint="@string/adminName"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text6"
                android:background="#D1D1D1"
                android:id="@+id/parking_view6"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view6"
                android:id="@+id/parking_text7"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                android:text="@string/adminMobile"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text7"
                app:layout_constraintBottom_toBottomOf="@id/parking_text7"
                android:id="@+id/parking_edit7"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:inputType="phone"
                android:hint="@string/adminMobile"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text7"
                android:background="#D1D1D1"
                android:id="@+id/parking_view7"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_view7"
                android:id="@+id/parking_text8"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:background="@color/white"
                android:text="@string/finePrice"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/parking_text8"
                app:layout_constraintBottom_toBottomOf="@id/parking_text8"
                android:id="@+id/parking_edit8"
                android:background="@color/white"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="horizontal"
                android:inputType="number"
                android:hint="@string/finePrice"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_text8"
                android:background="#D1D1D1"
                android:id="@+id/parking_view8"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_edit8"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="24dp"
                android:id="@+id/select_photo"
                android:src="@drawable/select_photo"
                android:padding="50dp"
                android:background="@color/white"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_photo"
                android:layout_marginTop="24dp"
                android:background="@drawable/commit_background"
                android:text="@string/create"
                android:id="@+id/commit_button"
                android:layout_marginBottom="48dp"
                />

            <com.xiyou3g.select.parking.MyListView>
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/parking_text8"
                app:layout_constraintBottom_toBottomOf="@id/parking_text8"
            </com.xiyou3g.select.parking.MyListView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.xiyou3g.select.parking.MyScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>